dsl/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    DOT

Grammar

Rule 0     S' -> Simulation
Rule 1     Simulation -> LT SIMULATION GT M A A Program LT DIV SIMULATION GT
Rule 2     M -> LT MAP GT MapDetail LT DIV MAP GT
Rule 3     MapDetail -> ROW EQ NUMERIC SEMICOLOM MapDetail
Rule 4     MapDetail -> COL EQ NUMERIC SEMICOLOM MapDetail
Rule 5     MapDetail -> empty
Rule 6     A -> LT ARMY GT ArmyDetail LT DIV ARMY GT
Rule 7     ArmyDetail -> ARMY_name EQ NUMERIC SEMICOLOM ArmyDetail
Rule 8     ArmyDetail -> AMOUNT EQ NUMERIC SEMICOLOM ArmyDetail
Rule 9     ArmyDetail -> empty
Rule 10    Program -> Declaration_aster
Rule 11    Declaration -> FuncDecl
Rule 12    Declaration -> VarDecl
Rule 13    Declaration -> Statement
Rule 14    VarDecl -> Type_ ID EQ Expression SEMICOLOM
Rule 15    Statement -> ExprStmt
Rule 16    Statement -> WhileStmt
Rule 17    Statement -> IfStmt
Rule 18    Statement -> PrintStmt
Rule 19    Statement -> ReturnStmt
Rule 20    Statement -> Block
Rule 21    Block -> OKEY Declaration_aster CKEY
Rule 22    Declaration_aster -> Declaration Declaration_aster
Rule 23    Declaration_aster -> empty
Rule 24    ExprStmt -> Expression SEMICOLOM
Rule 25    IfStmt -> IF OPP Expression CLP Statement Else_aster
Rule 26    Else_aster -> ELSE Statement
Rule 27    Else_aster -> empty
Rule 28    PrintStmt -> PRINT Expression SEMICOLOM
Rule 29    ReturnStmt -> RETURN Expression SEMICOLOM
Rule 30    WhileStmt -> WHILE OPP Expression CLP Statement
Rule 31    Expression -> Assignment
Rule 32    Assignment -> ID EQ Logic_or
Rule 33    Assignment -> Type_ ID EQ Logic_or
Rule 34    Assignment -> Logic_or
Rule 35    Logic_or -> Logic_or OR Logic_and
Rule 36    Logic_or -> Logic_and
Rule 37    Logic_and -> Logic_and AND Equality
Rule 38    Logic_and -> Equality
Rule 39    Equality -> Equality NOTEQ Comparison
Rule 40    Equality -> Equality EQEQ Comparison
Rule 41    Equality -> Comparison
Rule 42    Comparison -> Comparison GT Term
Rule 43    Comparison -> Comparison LT Term
Rule 44    Comparison -> Comparison LTE Term
Rule 45    Comparison -> Comparison GTE Term
Rule 46    Comparison -> Term
Rule 47    Term -> Term MINUS Factor
Rule 48    Term -> Term PLUS Factor
Rule 49    Term -> Factor
Rule 50    Factor -> Factor STAR Unary
Rule 51    Factor -> Factor DIV Unary
Rule 52    Factor -> Unary
Rule 53    Unary -> NOT Unary
Rule 54    Unary -> MINUS Unary
Rule 55    Unary -> Call
Rule 56    Call -> Primary OPP Arguments CLP
Rule 57    Call -> Primary
Rule 58    Arguments -> empty
Rule 59    Primary -> TRUE
Rule 60    Primary -> FALSE
Rule 61    Primary -> NUMERIC
Rule 62    Primary -> NIL
Rule 63    Primary -> ID
Rule 64    Arguments -> Expression Expression_aster
Rule 65    Expression_aster -> COMMA Expression Expression_aster
Rule 66    Expression_aster -> empty
Rule 67    FuncDecl -> FUNC Function
Rule 68    Function -> ID OPP Params CLP Block
Rule 69    Params -> Type_ ID ParamsAster
Rule 70    Params -> empty
Rule 71    ParamsAster -> COMMA Params ParamsAster
Rule 72    ParamsAster -> empty
Rule 73    Type_ -> INT
Rule 74    empty -> <empty>

Terminals, with rules where they appear

AMOUNT               : 8
AND                  : 37
ARMY                 : 6 6
ARMY_name            : 7
CKEY                 : 21
CLP                  : 25 30 56 68
COL                  : 4
COMMA                : 65 71
DIV                  : 1 2 6 51
DOT                  : 
ELSE                 : 26
EQ                   : 3 4 7 8 14 32 33
EQEQ                 : 40
FALSE                : 60
FUNC                 : 67
GT                   : 1 1 2 2 6 6 42
GTE                  : 45
ID                   : 14 32 33 63 68 69
IF                   : 25
INT                  : 73
LT                   : 1 1 2 2 6 6 43
LTE                  : 44
MAP                  : 2 2
MINUS                : 47 54
NIL                  : 62
NOT                  : 53
NOTEQ                : 39
NUMERIC              : 3 4 7 8 61
OKEY                 : 21
OPP                  : 25 30 56 68
OR                   : 35
PLUS                 : 48
PRINT                : 28
RETURN               : 29
ROW                  : 3
SEMICOLOM            : 3 4 7 8 14 24 28 29
SIMULATION           : 1 1
STAR                 : 50
TRUE                 : 59
WHILE                : 30
error                : 

Nonterminals, with rules where they appear

A                    : 1 1
Arguments            : 56
ArmyDetail           : 6 7 8
Assignment           : 31
Block                : 20 68
Call                 : 55
Comparison           : 39 40 41 42 43 44 45
Declaration          : 22
Declaration_aster    : 10 21 22
Else_aster           : 25
Equality             : 37 38 39 40
ExprStmt             : 15
Expression           : 14 24 25 28 29 30 64 65
Expression_aster     : 64 65
Factor               : 47 48 49 50 51
FuncDecl             : 11
Function             : 67
IfStmt               : 17
Logic_and            : 35 36 37
Logic_or             : 32 33 34 35
M                    : 1
MapDetail            : 2 3 4
Params               : 68 71
ParamsAster          : 69 71
Primary              : 56 57
PrintStmt            : 18
Program              : 1
ReturnStmt           : 19
Simulation           : 0
Statement            : 13 25 26 30
Term                 : 42 43 44 45 46 47 48
Type_                : 14 33 69
Unary                : 50 51 52 53 54
VarDecl              : 12
WhileStmt            : 16
empty                : 5 9 23 27 58 66 70 72

Parsing method: LALR

state 0

    (0) S' -> . Simulation
    (1) Simulation -> . LT SIMULATION GT M A A Program LT DIV SIMULATION GT

    LT              shift and go to state 2

    Simulation                     shift and go to state 1

state 1

    (0) S' -> Simulation .



state 2

    (1) Simulation -> LT . SIMULATION GT M A A Program LT DIV SIMULATION GT

    SIMULATION      shift and go to state 3


state 3

    (1) Simulation -> LT SIMULATION . GT M A A Program LT DIV SIMULATION GT

    GT              shift and go to state 4


state 4

    (1) Simulation -> LT SIMULATION GT . M A A Program LT DIV SIMULATION GT
    (2) M -> . LT MAP GT MapDetail LT DIV MAP GT

    LT              shift and go to state 5

    M                              shift and go to state 6

state 5

    (2) M -> LT . MAP GT MapDetail LT DIV MAP GT

    MAP             shift and go to state 7


state 6

    (1) Simulation -> LT SIMULATION GT M . A A Program LT DIV SIMULATION GT
    (6) A -> . LT ARMY GT ArmyDetail LT DIV ARMY GT

    LT              shift and go to state 8

    A                              shift and go to state 9

state 7

    (2) M -> LT MAP . GT MapDetail LT DIV MAP GT

    GT              shift and go to state 10


state 8

    (6) A -> LT . ARMY GT ArmyDetail LT DIV ARMY GT

    ARMY            shift and go to state 11


state 9

    (1) Simulation -> LT SIMULATION GT M A . A Program LT DIV SIMULATION GT
    (6) A -> . LT ARMY GT ArmyDetail LT DIV ARMY GT

    LT              shift and go to state 8

    A                              shift and go to state 12

state 10

    (2) M -> LT MAP GT . MapDetail LT DIV MAP GT
    (3) MapDetail -> . ROW EQ NUMERIC SEMICOLOM MapDetail
    (4) MapDetail -> . COL EQ NUMERIC SEMICOLOM MapDetail
    (5) MapDetail -> . empty
    (74) empty -> .

    ROW             shift and go to state 14
    COL             shift and go to state 15
    LT              reduce using rule 74 (empty -> .)

    MapDetail                      shift and go to state 13
    empty                          shift and go to state 16

state 11

    (6) A -> LT ARMY . GT ArmyDetail LT DIV ARMY GT

    GT              shift and go to state 17


state 12

    (1) Simulation -> LT SIMULATION GT M A A . Program LT DIV SIMULATION GT
    (10) Program -> . Declaration_aster
    (22) Declaration_aster -> . Declaration Declaration_aster
    (23) Declaration_aster -> . empty
    (11) Declaration -> . FuncDecl
    (12) Declaration -> . VarDecl
    (13) Declaration -> . Statement
    (74) empty -> .
    (67) FuncDecl -> . FUNC Function
    (14) VarDecl -> . Type_ ID EQ Expression SEMICOLOM
    (15) Statement -> . ExprStmt
    (16) Statement -> . WhileStmt
    (17) Statement -> . IfStmt
    (18) Statement -> . PrintStmt
    (19) Statement -> . ReturnStmt
    (20) Statement -> . Block
    (73) Type_ -> . INT
    (24) ExprStmt -> . Expression SEMICOLOM
    (30) WhileStmt -> . WHILE OPP Expression CLP Statement
    (25) IfStmt -> . IF OPP Expression CLP Statement Else_aster
    (28) PrintStmt -> . PRINT Expression SEMICOLOM
    (29) ReturnStmt -> . RETURN Expression SEMICOLOM
    (21) Block -> . OKEY Declaration_aster CKEY
    (31) Expression -> . Assignment
    (32) Assignment -> . ID EQ Logic_or
    (33) Assignment -> . Type_ ID EQ Logic_or
    (34) Assignment -> . Logic_or
    (35) Logic_or -> . Logic_or OR Logic_and
    (36) Logic_or -> . Logic_and
    (37) Logic_and -> . Logic_and AND Equality
    (38) Logic_and -> . Equality
    (39) Equality -> . Equality NOTEQ Comparison
    (40) Equality -> . Equality EQEQ Comparison
    (41) Equality -> . Comparison
    (42) Comparison -> . Comparison GT Term
    (43) Comparison -> . Comparison LT Term
    (44) Comparison -> . Comparison LTE Term
    (45) Comparison -> . Comparison GTE Term
    (46) Comparison -> . Term
    (47) Term -> . Term MINUS Factor
    (48) Term -> . Term PLUS Factor
    (49) Term -> . Factor
    (50) Factor -> . Factor STAR Unary
    (51) Factor -> . Factor DIV Unary
    (52) Factor -> . Unary
    (53) Unary -> . NOT Unary
    (54) Unary -> . MINUS Unary
    (55) Unary -> . Call
    (56) Call -> . Primary OPP Arguments CLP
    (57) Call -> . Primary
    (59) Primary -> . TRUE
    (60) Primary -> . FALSE
    (61) Primary -> . NUMERIC
    (62) Primary -> . NIL
    (63) Primary -> . ID

    LT              reduce using rule 74 (empty -> .)
    FUNC            shift and go to state 25
    INT             shift and go to state 35
    WHILE           shift and go to state 36
    IF              shift and go to state 37
    PRINT           shift and go to state 38
    RETURN          shift and go to state 39
    OKEY            shift and go to state 40
    ID              shift and go to state 27
    NOT             shift and go to state 50
    MINUS           shift and go to state 47
    TRUE            shift and go to state 53
    FALSE           shift and go to state 54
    NUMERIC         shift and go to state 55
    NIL             shift and go to state 56

    Program                        shift and go to state 18
    Declaration_aster              shift and go to state 19
    Declaration                    shift and go to state 20
    empty                          shift and go to state 21
    FuncDecl                       shift and go to state 22
    VarDecl                        shift and go to state 23
    Statement                      shift and go to state 24
    Type_                          shift and go to state 26
    Expression                     shift and go to state 28
    ExprStmt                       shift and go to state 29
    WhileStmt                      shift and go to state 30
    IfStmt                         shift and go to state 31
    PrintStmt                      shift and go to state 32
    ReturnStmt                     shift and go to state 33
    Block                          shift and go to state 34
    Assignment                     shift and go to state 41
    Logic_or                       shift and go to state 42
    Logic_and                      shift and go to state 43
    Equality                       shift and go to state 44
    Comparison                     shift and go to state 45
    Term                           shift and go to state 46
    Factor                         shift and go to state 48
    Unary                          shift and go to state 49
    Call                           shift and go to state 51
    Primary                        shift and go to state 52

state 13

    (2) M -> LT MAP GT MapDetail . LT DIV MAP GT

    LT              shift and go to state 57


state 14

    (3) MapDetail -> ROW . EQ NUMERIC SEMICOLOM MapDetail

    EQ              shift and go to state 58


state 15

    (4) MapDetail -> COL . EQ NUMERIC SEMICOLOM MapDetail

    EQ              shift and go to state 59


state 16

    (5) MapDetail -> empty .

    LT              reduce using rule 5 (MapDetail -> empty .)


state 17

    (6) A -> LT ARMY GT . ArmyDetail LT DIV ARMY GT
    (7) ArmyDetail -> . ARMY_name EQ NUMERIC SEMICOLOM ArmyDetail
    (8) ArmyDetail -> . AMOUNT EQ NUMERIC SEMICOLOM ArmyDetail
    (9) ArmyDetail -> . empty
    (74) empty -> .

    ARMY_name       shift and go to state 61
    AMOUNT          shift and go to state 62
    LT              reduce using rule 74 (empty -> .)

    ArmyDetail                     shift and go to state 60
    empty                          shift and go to state 63

state 18

    (1) Simulation -> LT SIMULATION GT M A A Program . LT DIV SIMULATION GT

    LT              shift and go to state 64


state 19

    (10) Program -> Declaration_aster .

    LT              reduce using rule 10 (Program -> Declaration_aster .)


state 20

    (22) Declaration_aster -> Declaration . Declaration_aster
    (22) Declaration_aster -> . Declaration Declaration_aster
    (23) Declaration_aster -> . empty
    (11) Declaration -> . FuncDecl
    (12) Declaration -> . VarDecl
    (13) Declaration -> . Statement
    (74) empty -> .
    (67) FuncDecl -> . FUNC Function
    (14) VarDecl -> . Type_ ID EQ Expression SEMICOLOM
    (15) Statement -> . ExprStmt
    (16) Statement -> . WhileStmt
    (17) Statement -> . IfStmt
    (18) Statement -> . PrintStmt
    (19) Statement -> . ReturnStmt
    (20) Statement -> . Block
    (73) Type_ -> . INT
    (24) ExprStmt -> . Expression SEMICOLOM
    (30) WhileStmt -> . WHILE OPP Expression CLP Statement
    (25) IfStmt -> . IF OPP Expression CLP Statement Else_aster
    (28) PrintStmt -> . PRINT Expression SEMICOLOM
    (29) ReturnStmt -> . RETURN Expression SEMICOLOM
    (21) Block -> . OKEY Declaration_aster CKEY
    (31) Expression -> . Assignment
    (32) Assignment -> . ID EQ Logic_or
    (33) Assignment -> . Type_ ID EQ Logic_or
    (34) Assignment -> . Logic_or
    (35) Logic_or -> . Logic_or OR Logic_and
    (36) Logic_or -> . Logic_and
    (37) Logic_and -> . Logic_and AND Equality
    (38) Logic_and -> . Equality
    (39) Equality -> . Equality NOTEQ Comparison
    (40) Equality -> . Equality EQEQ Comparison
    (41) Equality -> . Comparison
    (42) Comparison -> . Comparison GT Term
    (43) Comparison -> . Comparison LT Term
    (44) Comparison -> . Comparison LTE Term
    (45) Comparison -> . Comparison GTE Term
    (46) Comparison -> . Term
    (47) Term -> . Term MINUS Factor
    (48) Term -> . Term PLUS Factor
    (49) Term -> . Factor
    (50) Factor -> . Factor STAR Unary
    (51) Factor -> . Factor DIV Unary
    (52) Factor -> . Unary
    (53) Unary -> . NOT Unary
    (54) Unary -> . MINUS Unary
    (55) Unary -> . Call
    (56) Call -> . Primary OPP Arguments CLP
    (57) Call -> . Primary
    (59) Primary -> . TRUE
    (60) Primary -> . FALSE
    (61) Primary -> . NUMERIC
    (62) Primary -> . NIL
    (63) Primary -> . ID

    LT              reduce using rule 74 (empty -> .)
    CKEY            reduce using rule 74 (empty -> .)
    FUNC            shift and go to state 25
    INT             shift and go to state 35
    WHILE           shift and go to state 36
    IF              shift and go to state 37
    PRINT           shift and go to state 38
    RETURN          shift and go to state 39
    OKEY            shift and go to state 40
    ID              shift and go to state 27
    NOT             shift and go to state 50
    MINUS           shift and go to state 47
    TRUE            shift and go to state 53
    FALSE           shift and go to state 54
    NUMERIC         shift and go to state 55
    NIL             shift and go to state 56

    Declaration                    shift and go to state 20
    Declaration_aster              shift and go to state 65
    empty                          shift and go to state 21
    FuncDecl                       shift and go to state 22
    VarDecl                        shift and go to state 23
    Statement                      shift and go to state 24
    Type_                          shift and go to state 26
    Expression                     shift and go to state 28
    ExprStmt                       shift and go to state 29
    WhileStmt                      shift and go to state 30
    IfStmt                         shift and go to state 31
    PrintStmt                      shift and go to state 32
    ReturnStmt                     shift and go to state 33
    Block                          shift and go to state 34
    Assignment                     shift and go to state 41
    Logic_or                       shift and go to state 42
    Logic_and                      shift and go to state 43
    Equality                       shift and go to state 44
    Comparison                     shift and go to state 45
    Term                           shift and go to state 46
    Factor                         shift and go to state 48
    Unary                          shift and go to state 49
    Call                           shift and go to state 51
    Primary                        shift and go to state 52

state 21

    (23) Declaration_aster -> empty .

    LT              reduce using rule 23 (Declaration_aster -> empty .)
    CKEY            reduce using rule 23 (Declaration_aster -> empty .)


state 22

    (11) Declaration -> FuncDecl .

    FUNC            reduce using rule 11 (Declaration -> FuncDecl .)
    INT             reduce using rule 11 (Declaration -> FuncDecl .)
    WHILE           reduce using rule 11 (Declaration -> FuncDecl .)
    IF              reduce using rule 11 (Declaration -> FuncDecl .)
    PRINT           reduce using rule 11 (Declaration -> FuncDecl .)
    RETURN          reduce using rule 11 (Declaration -> FuncDecl .)
    OKEY            reduce using rule 11 (Declaration -> FuncDecl .)
    ID              reduce using rule 11 (Declaration -> FuncDecl .)
    NOT             reduce using rule 11 (Declaration -> FuncDecl .)
    MINUS           reduce using rule 11 (Declaration -> FuncDecl .)
    TRUE            reduce using rule 11 (Declaration -> FuncDecl .)
    FALSE           reduce using rule 11 (Declaration -> FuncDecl .)
    NUMERIC         reduce using rule 11 (Declaration -> FuncDecl .)
    NIL             reduce using rule 11 (Declaration -> FuncDecl .)
    LT              reduce using rule 11 (Declaration -> FuncDecl .)
    CKEY            reduce using rule 11 (Declaration -> FuncDecl .)


state 23

    (12) Declaration -> VarDecl .

    FUNC            reduce using rule 12 (Declaration -> VarDecl .)
    INT             reduce using rule 12 (Declaration -> VarDecl .)
    WHILE           reduce using rule 12 (Declaration -> VarDecl .)
    IF              reduce using rule 12 (Declaration -> VarDecl .)
    PRINT           reduce using rule 12 (Declaration -> VarDecl .)
    RETURN          reduce using rule 12 (Declaration -> VarDecl .)
    OKEY            reduce using rule 12 (Declaration -> VarDecl .)
    ID              reduce using rule 12 (Declaration -> VarDecl .)
    NOT             reduce using rule 12 (Declaration -> VarDecl .)
    MINUS           reduce using rule 12 (Declaration -> VarDecl .)
    TRUE            reduce using rule 12 (Declaration -> VarDecl .)
    FALSE           reduce using rule 12 (Declaration -> VarDecl .)
    NUMERIC         reduce using rule 12 (Declaration -> VarDecl .)
    NIL             reduce using rule 12 (Declaration -> VarDecl .)
    LT              reduce using rule 12 (Declaration -> VarDecl .)
    CKEY            reduce using rule 12 (Declaration -> VarDecl .)


state 24

    (13) Declaration -> Statement .

    FUNC            reduce using rule 13 (Declaration -> Statement .)
    INT             reduce using rule 13 (Declaration -> Statement .)
    WHILE           reduce using rule 13 (Declaration -> Statement .)
    IF              reduce using rule 13 (Declaration -> Statement .)
    PRINT           reduce using rule 13 (Declaration -> Statement .)
    RETURN          reduce using rule 13 (Declaration -> Statement .)
    OKEY            reduce using rule 13 (Declaration -> Statement .)
    ID              reduce using rule 13 (Declaration -> Statement .)
    NOT             reduce using rule 13 (Declaration -> Statement .)
    MINUS           reduce using rule 13 (Declaration -> Statement .)
    TRUE            reduce using rule 13 (Declaration -> Statement .)
    FALSE           reduce using rule 13 (Declaration -> Statement .)
    NUMERIC         reduce using rule 13 (Declaration -> Statement .)
    NIL             reduce using rule 13 (Declaration -> Statement .)
    LT              reduce using rule 13 (Declaration -> Statement .)
    CKEY            reduce using rule 13 (Declaration -> Statement .)


state 25

    (67) FuncDecl -> FUNC . Function
    (68) Function -> . ID OPP Params CLP Block

    ID              shift and go to state 67

    Function                       shift and go to state 66

state 26

    (14) VarDecl -> Type_ . ID EQ Expression SEMICOLOM
    (33) Assignment -> Type_ . ID EQ Logic_or

    ID              shift and go to state 68


state 27

    (32) Assignment -> ID . EQ Logic_or
    (63) Primary -> ID .

    EQ              shift and go to state 69
    OPP             reduce using rule 63 (Primary -> ID .)
    STAR            reduce using rule 63 (Primary -> ID .)
    DIV             reduce using rule 63 (Primary -> ID .)
    MINUS           reduce using rule 63 (Primary -> ID .)
    PLUS            reduce using rule 63 (Primary -> ID .)
    GT              reduce using rule 63 (Primary -> ID .)
    LT              reduce using rule 63 (Primary -> ID .)
    LTE             reduce using rule 63 (Primary -> ID .)
    GTE             reduce using rule 63 (Primary -> ID .)
    NOTEQ           reduce using rule 63 (Primary -> ID .)
    EQEQ            reduce using rule 63 (Primary -> ID .)
    AND             reduce using rule 63 (Primary -> ID .)
    OR              reduce using rule 63 (Primary -> ID .)
    SEMICOLOM       reduce using rule 63 (Primary -> ID .)
    CLP             reduce using rule 63 (Primary -> ID .)
    COMMA           reduce using rule 63 (Primary -> ID .)


state 28

    (24) ExprStmt -> Expression . SEMICOLOM

    SEMICOLOM       shift and go to state 70


state 29

    (15) Statement -> ExprStmt .

    FUNC            reduce using rule 15 (Statement -> ExprStmt .)
    INT             reduce using rule 15 (Statement -> ExprStmt .)
    WHILE           reduce using rule 15 (Statement -> ExprStmt .)
    IF              reduce using rule 15 (Statement -> ExprStmt .)
    PRINT           reduce using rule 15 (Statement -> ExprStmt .)
    RETURN          reduce using rule 15 (Statement -> ExprStmt .)
    OKEY            reduce using rule 15 (Statement -> ExprStmt .)
    ID              reduce using rule 15 (Statement -> ExprStmt .)
    NOT             reduce using rule 15 (Statement -> ExprStmt .)
    MINUS           reduce using rule 15 (Statement -> ExprStmt .)
    TRUE            reduce using rule 15 (Statement -> ExprStmt .)
    FALSE           reduce using rule 15 (Statement -> ExprStmt .)
    NUMERIC         reduce using rule 15 (Statement -> ExprStmt .)
    NIL             reduce using rule 15 (Statement -> ExprStmt .)
    LT              reduce using rule 15 (Statement -> ExprStmt .)
    CKEY            reduce using rule 15 (Statement -> ExprStmt .)
    ELSE            reduce using rule 15 (Statement -> ExprStmt .)


state 30

    (16) Statement -> WhileStmt .

    FUNC            reduce using rule 16 (Statement -> WhileStmt .)
    INT             reduce using rule 16 (Statement -> WhileStmt .)
    WHILE           reduce using rule 16 (Statement -> WhileStmt .)
    IF              reduce using rule 16 (Statement -> WhileStmt .)
    PRINT           reduce using rule 16 (Statement -> WhileStmt .)
    RETURN          reduce using rule 16 (Statement -> WhileStmt .)
    OKEY            reduce using rule 16 (Statement -> WhileStmt .)
    ID              reduce using rule 16 (Statement -> WhileStmt .)
    NOT             reduce using rule 16 (Statement -> WhileStmt .)
    MINUS           reduce using rule 16 (Statement -> WhileStmt .)
    TRUE            reduce using rule 16 (Statement -> WhileStmt .)
    FALSE           reduce using rule 16 (Statement -> WhileStmt .)
    NUMERIC         reduce using rule 16 (Statement -> WhileStmt .)
    NIL             reduce using rule 16 (Statement -> WhileStmt .)
    LT              reduce using rule 16 (Statement -> WhileStmt .)
    CKEY            reduce using rule 16 (Statement -> WhileStmt .)
    ELSE            reduce using rule 16 (Statement -> WhileStmt .)


state 31

    (17) Statement -> IfStmt .

    FUNC            reduce using rule 17 (Statement -> IfStmt .)
    INT             reduce using rule 17 (Statement -> IfStmt .)
    WHILE           reduce using rule 17 (Statement -> IfStmt .)
    IF              reduce using rule 17 (Statement -> IfStmt .)
    PRINT           reduce using rule 17 (Statement -> IfStmt .)
    RETURN          reduce using rule 17 (Statement -> IfStmt .)
    OKEY            reduce using rule 17 (Statement -> IfStmt .)
    ID              reduce using rule 17 (Statement -> IfStmt .)
    NOT             reduce using rule 17 (Statement -> IfStmt .)
    MINUS           reduce using rule 17 (Statement -> IfStmt .)
    TRUE            reduce using rule 17 (Statement -> IfStmt .)
    FALSE           reduce using rule 17 (Statement -> IfStmt .)
    NUMERIC         reduce using rule 17 (Statement -> IfStmt .)
    NIL             reduce using rule 17 (Statement -> IfStmt .)
    LT              reduce using rule 17 (Statement -> IfStmt .)
    CKEY            reduce using rule 17 (Statement -> IfStmt .)
    ELSE            reduce using rule 17 (Statement -> IfStmt .)


state 32

    (18) Statement -> PrintStmt .

    FUNC            reduce using rule 18 (Statement -> PrintStmt .)
    INT             reduce using rule 18 (Statement -> PrintStmt .)
    WHILE           reduce using rule 18 (Statement -> PrintStmt .)
    IF              reduce using rule 18 (Statement -> PrintStmt .)
    PRINT           reduce using rule 18 (Statement -> PrintStmt .)
    RETURN          reduce using rule 18 (Statement -> PrintStmt .)
    OKEY            reduce using rule 18 (Statement -> PrintStmt .)
    ID              reduce using rule 18 (Statement -> PrintStmt .)
    NOT             reduce using rule 18 (Statement -> PrintStmt .)
    MINUS           reduce using rule 18 (Statement -> PrintStmt .)
    TRUE            reduce using rule 18 (Statement -> PrintStmt .)
    FALSE           reduce using rule 18 (Statement -> PrintStmt .)
    NUMERIC         reduce using rule 18 (Statement -> PrintStmt .)
    NIL             reduce using rule 18 (Statement -> PrintStmt .)
    LT              reduce using rule 18 (Statement -> PrintStmt .)
    CKEY            reduce using rule 18 (Statement -> PrintStmt .)
    ELSE            reduce using rule 18 (Statement -> PrintStmt .)


state 33

    (19) Statement -> ReturnStmt .

    FUNC            reduce using rule 19 (Statement -> ReturnStmt .)
    INT             reduce using rule 19 (Statement -> ReturnStmt .)
    WHILE           reduce using rule 19 (Statement -> ReturnStmt .)
    IF              reduce using rule 19 (Statement -> ReturnStmt .)
    PRINT           reduce using rule 19 (Statement -> ReturnStmt .)
    RETURN          reduce using rule 19 (Statement -> ReturnStmt .)
    OKEY            reduce using rule 19 (Statement -> ReturnStmt .)
    ID              reduce using rule 19 (Statement -> ReturnStmt .)
    NOT             reduce using rule 19 (Statement -> ReturnStmt .)
    MINUS           reduce using rule 19 (Statement -> ReturnStmt .)
    TRUE            reduce using rule 19 (Statement -> ReturnStmt .)
    FALSE           reduce using rule 19 (Statement -> ReturnStmt .)
    NUMERIC         reduce using rule 19 (Statement -> ReturnStmt .)
    NIL             reduce using rule 19 (Statement -> ReturnStmt .)
    LT              reduce using rule 19 (Statement -> ReturnStmt .)
    CKEY            reduce using rule 19 (Statement -> ReturnStmt .)
    ELSE            reduce using rule 19 (Statement -> ReturnStmt .)


state 34

    (20) Statement -> Block .

    FUNC            reduce using rule 20 (Statement -> Block .)
    INT             reduce using rule 20 (Statement -> Block .)
    WHILE           reduce using rule 20 (Statement -> Block .)
    IF              reduce using rule 20 (Statement -> Block .)
    PRINT           reduce using rule 20 (Statement -> Block .)
    RETURN          reduce using rule 20 (Statement -> Block .)
    OKEY            reduce using rule 20 (Statement -> Block .)
    ID              reduce using rule 20 (Statement -> Block .)
    NOT             reduce using rule 20 (Statement -> Block .)
    MINUS           reduce using rule 20 (Statement -> Block .)
    TRUE            reduce using rule 20 (Statement -> Block .)
    FALSE           reduce using rule 20 (Statement -> Block .)
    NUMERIC         reduce using rule 20 (Statement -> Block .)
    NIL             reduce using rule 20 (Statement -> Block .)
    LT              reduce using rule 20 (Statement -> Block .)
    CKEY            reduce using rule 20 (Statement -> Block .)
    ELSE            reduce using rule 20 (Statement -> Block .)


state 35

    (73) Type_ -> INT .

    ID              reduce using rule 73 (Type_ -> INT .)


state 36

    (30) WhileStmt -> WHILE . OPP Expression CLP Statement

    OPP             shift and go to state 71


state 37

    (25) IfStmt -> IF . OPP Expression CLP Statement Else_aster

    OPP             shift and go to state 72


state 38

    (28) PrintStmt -> PRINT . Expression SEMICOLOM
    (31) Expression -> . Assignment
    (32) Assignment -> . ID EQ Logic_or
    (33) Assignment -> . Type_ ID EQ Logic_or
    (34) Assignment -> . Logic_or
    (73) Type_ -> . INT
    (35) Logic_or -> . Logic_or OR Logic_and
    (36) Logic_or -> . Logic_and
    (37) Logic_and -> . Logic_and AND Equality
    (38) Logic_and -> . Equality
    (39) Equality -> . Equality NOTEQ Comparison
    (40) Equality -> . Equality EQEQ Comparison
    (41) Equality -> . Comparison
    (42) Comparison -> . Comparison GT Term
    (43) Comparison -> . Comparison LT Term
    (44) Comparison -> . Comparison LTE Term
    (45) Comparison -> . Comparison GTE Term
    (46) Comparison -> . Term
    (47) Term -> . Term MINUS Factor
    (48) Term -> . Term PLUS Factor
    (49) Term -> . Factor
    (50) Factor -> . Factor STAR Unary
    (51) Factor -> . Factor DIV Unary
    (52) Factor -> . Unary
    (53) Unary -> . NOT Unary
    (54) Unary -> . MINUS Unary
    (55) Unary -> . Call
    (56) Call -> . Primary OPP Arguments CLP
    (57) Call -> . Primary
    (59) Primary -> . TRUE
    (60) Primary -> . FALSE
    (61) Primary -> . NUMERIC
    (62) Primary -> . NIL
    (63) Primary -> . ID

    ID              shift and go to state 27
    INT             shift and go to state 35
    NOT             shift and go to state 50
    MINUS           shift and go to state 47
    TRUE            shift and go to state 53
    FALSE           shift and go to state 54
    NUMERIC         shift and go to state 55
    NIL             shift and go to state 56

    Expression                     shift and go to state 73
    Assignment                     shift and go to state 41
    Logic_or                       shift and go to state 42
    Type_                          shift and go to state 74
    Logic_and                      shift and go to state 43
    Equality                       shift and go to state 44
    Comparison                     shift and go to state 45
    Term                           shift and go to state 46
    Factor                         shift and go to state 48
    Unary                          shift and go to state 49
    Call                           shift and go to state 51
    Primary                        shift and go to state 52

state 39

    (29) ReturnStmt -> RETURN . Expression SEMICOLOM
    (31) Expression -> . Assignment
    (32) Assignment -> . ID EQ Logic_or
    (33) Assignment -> . Type_ ID EQ Logic_or
    (34) Assignment -> . Logic_or
    (73) Type_ -> . INT
    (35) Logic_or -> . Logic_or OR Logic_and
    (36) Logic_or -> . Logic_and
    (37) Logic_and -> . Logic_and AND Equality
    (38) Logic_and -> . Equality
    (39) Equality -> . Equality NOTEQ Comparison
    (40) Equality -> . Equality EQEQ Comparison
    (41) Equality -> . Comparison
    (42) Comparison -> . Comparison GT Term
    (43) Comparison -> . Comparison LT Term
    (44) Comparison -> . Comparison LTE Term
    (45) Comparison -> . Comparison GTE Term
    (46) Comparison -> . Term
    (47) Term -> . Term MINUS Factor
    (48) Term -> . Term PLUS Factor
    (49) Term -> . Factor
    (50) Factor -> . Factor STAR Unary
    (51) Factor -> . Factor DIV Unary
    (52) Factor -> . Unary
    (53) Unary -> . NOT Unary
    (54) Unary -> . MINUS Unary
    (55) Unary -> . Call
    (56) Call -> . Primary OPP Arguments CLP
    (57) Call -> . Primary
    (59) Primary -> . TRUE
    (60) Primary -> . FALSE
    (61) Primary -> . NUMERIC
    (62) Primary -> . NIL
    (63) Primary -> . ID

    ID              shift and go to state 27
    INT             shift and go to state 35
    NOT             shift and go to state 50
    MINUS           shift and go to state 47
    TRUE            shift and go to state 53
    FALSE           shift and go to state 54
    NUMERIC         shift and go to state 55
    NIL             shift and go to state 56

    Expression                     shift and go to state 75
    Assignment                     shift and go to state 41
    Logic_or                       shift and go to state 42
    Type_                          shift and go to state 74
    Logic_and                      shift and go to state 43
    Equality                       shift and go to state 44
    Comparison                     shift and go to state 45
    Term                           shift and go to state 46
    Factor                         shift and go to state 48
    Unary                          shift and go to state 49
    Call                           shift and go to state 51
    Primary                        shift and go to state 52

state 40
